fix: hide leaderboard when collapsed to prevent focus with "Tap"

--- a/frontend/src/Components/Pages/Home/LeaderBoard/LeaderBoard.module.scss
+++ b/frontend/src/Components/Pages/Home/LeaderBoard/LeaderBoard.module.scss
@@ -46,6 +46,7 @@
 
 .leaderboardWrapper.collapse .leaderBoard {
   pointer-events: none;
+  display: none;
 }
 
 .leaderBoard :where(thead, tbody) {
